front-end/src/components/vote-card.css
.VotePanel {
    margin: 1.5em;
}

.VoteContainer {
    max-width: 90vw;
    width: 640px;
}

.VoteContainer .SelectedVotePanel {
    background-color: #159957;
    background-image: linear-gradient(120deg, #155799, #159957);
    color: white;
}

.VotePanel .VotePanelButton {
    width: 100%;
}

.VotePanelContents {
    margin: 1.5em;
}

.EditableVoteOptionHeader {
    display: flex;
}

.EditableVoteOptionHeader .MuiFormControl-root {
    flex-grow: 1;
}

.VoteOption {
    overflow-wrap: anywhere;
}

.VoteOptionDescription {
    text-align: justify;
}

.VoteResultPanel {
    display: flex;
}

.VoteResultPanel .VoteDescriptionPanel {
    flex-grow: 1;
}

.VoteResultPanel .VoteOutcomePanel {
    margin-top: 0.3em;
    margin-right: 0.5em;
    display: flex;
    flex-direction: column;
}

